v2-website/versioned_docs/version-0.61/progressviewios.md
---
id: progressviewios
title: '🚧 ProgressViewIOS'
original_id: progressviewios
---

&gt; **Deprecated.** Use [@react-native-community/progress-view](https://github.com/react-native-community/progress-view) instead.

Uses `ProgressViewIOS` to render a UIProgressView on iOS.

---

# Reference

## Props

Inherits [View Props](view.md#props).

### `progress`

The progress value (between 0 and 1).

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `progressImage`

A stretchable image to display as the progress bar.

| Type                   | Required |
| ---------------------- | -------- |
| Image.propTypes.source | No       |

---

### `progressTintColor`

The tint color of the progress bar itself.

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `progressViewStyle`

The progress bar style.

| Type                   | Required |
| ---------------------- | -------- |
| enum('default', 'bar') | No       |

---

### `trackImage`

A stretchable image to display behind the progress bar.

| Type                   | Required |
| ---------------------- | -------- |
| Image.propTypes.source | No       |

---

### `trackTintColor`

The tint color of the progress bar track.

| Type   | Required |
| ------ | -------- |
| string | No       |
